Refactoring, updating readme, scripts ...